--- a/ContractorCalculator/Base.lproj/Main.storyboard
+++ b/ContractorCalculator/Base.lproj/Main.storyboard
@@ -1,24 +1,136 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ContractorCalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labor:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oS2-SC-fXz">
+                                <rect key="frame" x="50" y="94" width="48.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Materials:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Med-Nw-qVg">
+                                <rect key="frame" x="50" y="135" width="74" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SubTotal:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9J-lw-Bzi">
+                                <rect key="frame" x="50" y="260" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8vY-25-qiE">
+                                <rect key="frame" x="138.5" y="94" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="lbF-4p-qC6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q84-VV-YOB">
+                                <rect key="frame" x="165" y="182" width="108" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Calculate"/>
+                                <connections>
+                                    <action selector="calculate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hwA-XY-Y7Y"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tax:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lll-w5-hir">
+                                <rect key="frame" x="89" y="289" width="31" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Toq-MB-JEn">
+                                <rect key="frame" x="78" y="318" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8i-ha-aIi">
+                                <rect key="frame" x="125" y="260" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3q-Yf-cud">
+                                <rect key="frame" x="125" y="291" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j4J-1B-bJn">
+                                <rect key="frame" x="128" y="318" width="29.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="47u-oU-XO7">
+                                <rect key="frame" x="139" y="130" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="HH7-hw-9wK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="47u-oU-XO7" firstAttribute="top" secondItem="8vY-25-qiE" secondAttribute="bottom" constant="2" id="0RS-uK-acI"/>
+                            <constraint firstItem="R8i-ha-aIi" firstAttribute="leading" secondItem="R9J-lw-Bzi" secondAttribute="trailing" constant="5" id="17i-Kd-j57"/>
+                            <constraint firstItem="8vY-25-qiE" firstAttribute="leading" secondItem="oS2-SC-fXz" secondAttribute="trailing" constant="40" id="6Mg-9E-i2D"/>
+                            <constraint firstItem="I3q-Yf-cud" firstAttribute="top" secondItem="R9J-lw-Bzi" secondAttribute="bottom" constant="10" id="6Yi-Os-YfM"/>
+                            <constraint firstItem="j4J-1B-bJn" firstAttribute="leading" secondItem="Toq-MB-JEn" secondAttribute="trailing" constant="5" id="7En-0m-yKl"/>
+                            <constraint firstItem="Lll-w5-hir" firstAttribute="top" secondItem="R9J-lw-Bzi" secondAttribute="bottom" constant="8" symbolic="YES" id="7aJ-iI-0nf"/>
+                            <constraint firstItem="R9J-lw-Bzi" firstAttribute="top" secondItem="Med-Nw-qVg" secondAttribute="bottom" constant="104" id="FAQ-YU-WSI"/>
+                            <constraint firstItem="oS2-SC-fXz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="FwP-IZ-xFe"/>
+                            <constraint firstItem="Toq-MB-JEn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="78" id="GrH-IL-5D0"/>
+                            <constraint firstItem="Med-Nw-qVg" firstAttribute="top" secondItem="oS2-SC-fXz" secondAttribute="bottom" constant="20" id="IqF-Po-sOG"/>
+                            <constraint firstItem="Med-Nw-qVg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="QH5-3E-SXC"/>
+                            <constraint firstItem="Toq-MB-JEn" firstAttribute="top" secondItem="Lll-w5-hir" secondAttribute="bottom" constant="8" symbolic="YES" id="V4a-cP-3WS"/>
+                            <constraint firstItem="oS2-SC-fXz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="Yfj-SZ-TfS"/>
+                            <constraint firstItem="R8i-ha-aIi" firstAttribute="top" secondItem="Med-Nw-qVg" secondAttribute="bottom" constant="104" id="abo-RZ-N4f"/>
+                            <constraint firstItem="Lll-w5-hir" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="89" id="ckf-Lk-4BC"/>
+                            <constraint firstItem="8vY-25-qiE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="flQ-O5-sd8"/>
+                            <constraint firstItem="j4J-1B-bJn" firstAttribute="top" secondItem="Lll-w5-hir" secondAttribute="bottom" constant="8" symbolic="YES" id="glR-yI-kIo"/>
+                            <constraint firstItem="I3q-Yf-cud" firstAttribute="leading" secondItem="Lll-w5-hir" secondAttribute="trailing" constant="5" id="lJC-NE-aEz"/>
+                            <constraint firstItem="47u-oU-XO7" firstAttribute="leading" secondItem="Med-Nw-qVg" secondAttribute="trailing" constant="15" id="qbs-Rj-FSw"/>
+                            <constraint firstItem="R9J-lw-Bzi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="xnG-Le-4Yf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="labor" destination="8vY-25-qiE" id="tz1-Qf-Ls0"/>
+                        <outlet property="materials" destination="47u-oU-XO7" id="r8C-lc-En3"/>
+                        <outlet property="subtotal" destination="R8i-ha-aIi" id="wi5-eA-5ct"/>
+                        <outlet property="tax" destination="I3q-Yf-cud" id="WRh-PP-zxM"/>
+                        <outlet property="total" destination="j4J-1B-bJn" id="F4K-Q2-Z6k"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="83.705357142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
